--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     font-family: JetBrains Mono;
 }
 
+/*** divs ***/
+
 #container {
     height: 400px;
     width: 400px;
@@ -10,6 +12,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     border: 1px solid black;
+    border-radius: 2px;
     margin: 50px;
 }
 
@@ -17,9 +20,6 @@
     border: 1px solid gray;
 }
 
-/* .grid:hover {
-    background-color: black;
-} */
 
 .settings {
     height: 400px;
@@ -27,6 +27,7 @@
     display: flex;
     flex-direction: column;
     border: 1px solid black;
+    border-radius: 2px;
     margin: 50px;
     text-align: center;
 }
@@ -36,16 +37,13 @@
     flex-direction: row;
     justify-content: center;
     border: 1px solid black;
+    border-radius: 2px;
     width: 800px;
     margin: 0 auto 0 auto;
 }
 
 .header {
     text-align: center;
-}
-
-.black {
-    background-color: black;
 }
 
 .title {
@@ -57,7 +55,21 @@ p {
 }
 
 button {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    border-radius: 2px;
     margin: 10px 20px 20px 20px;
+}
+
+button:hover {
+    background-color: black;
+    color: white;
+}
+
+.buttonOn {
+    background-color: black;
+    color: white;
 }
 
 input[type='color']:active {
@@ -82,4 +94,108 @@ input[type='color']::-webkit-color-swatch {
     border: none;
     border-radius: 50px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+/*** range input ***/
+
+input[type=range] {
+    height: 22px;
+    -webkit-appearance: none;
+    margin: 10px auto 10px auto;
+    width: 75%;
+}
+
+input[type=range]:focus {
+    outline: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 1px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #3071A9;
+    border-radius: 2px;
+    border: 1px solid #000000;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    box-shadow: 0px 0px 0px #000000;
+    border: 1px solid #000000;
+    height: 15px;
+    width: 15px;
+    border-radius: 50px;
+    background: #FFFFFF;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -8px;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #3071A9;
+}
+
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 1px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #3071A9;
+    border-radius: 2px;
+    border: 1px solid #000000;
+}
+
+input[type=range]::-moz-range-thumb {
+    box-shadow: 0px 0px 0px #000000;
+    border: 1px solid #000000;
+    height: 15px;
+    width: 15px;
+    border-radius: 50px;
+    background: #FFFFFF;
+    cursor: pointer;
+}
+
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 1px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+
+input[type=range]::-ms-fill-lower {
+    background: #3071A9;
+    border: 1px solid #000000;
+    border-radius: 4px;
+    box-shadow: 0px 0px 0px #000000;
+}
+
+input[type=range]::-ms-fill-upper {
+    background: #3071A9;
+    border: 1px solid #000000;
+    border-radius: 4px;
+    box-shadow: 0px 0px 0px #000000;
+}
+
+input[type=range]::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 0px 0px 0px #000000;
+    border: 1px solid #000000;
+    height: 15px;
+    width: 15px;
+    border-radius: 50px;
+    background: #FFFFFF;
+    cursor: pointer;
+}
+
+input[type=range]:focus::-ms-fill-lower {
+    background: #3071A9;
+}
+
+input[type=range]:focus::-ms-fill-upper {
+    background: #3071A9;
 }
