--- a/style.css
+++ b/style.css
@@ -11,13 +11,14 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 2px;
     margin: 50px;
 }
 
 .grid {
     border: 1px solid gray;
+    margin: -1px -1px;
 }
 
 
@@ -26,9 +27,9 @@
     width: 200px;
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 2px;
-    margin: 50px;
+    margin: 50px 20px 50px 50px;
     text-align: center;
 }
 
@@ -36,7 +37,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 2px;
     width: 800px;
     margin: 0 auto 0 auto;
@@ -199,3 +200,73 @@ input[type=range]:focus::-ms-fill-lower {
 input[type=range]:focus::-ms-fill-upper {
     background: #3071A9;
 }
+
+@media only screen and (max-width: 800px) {
+    .wrapper {
+        flex-direction: column-reverse;
+        align-items: center;
+        width: 90vw;
+    }
+
+    .settings {
+        margin: 0px auto 45px auto;
+        text-align: center;
+    }
+}
+
+@media only screen and (min-width 400px) and (max-width: 500px) {
+    .wrapper {
+        border: none;
+    }
+
+    .settings {
+        margin: 0px auto 20px auto;
+        text-align: center;
+    }
+
+    #container {
+        margin: -10px 25px 25px 25px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .wrapper {
+        border: none;
+    }
+
+    .settings {
+        margin: 0px auto 20px auto;
+        text-align: center;
+    }
+
+    #container {
+        margin: -10px 25px 25px 25px;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .wrapper {
+        border: none;
+    }
+
+    #container {
+        height: 300px;
+        width: 300px;
+        margin: -10px 25px 25px 25px;
+    }
+
+    .settings {
+        margin: 0px auto 20px auto;
+        text-align: center;
+    }
+}
+
+/* .wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    border: 2px solid black;
+    border-radius: 2px;
+    width: 800px;
+    margin: 0 auto 0 auto;
+} */
