--- a/style.css
+++ b/style.css
@@ -114,7 +114,6 @@ input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
     height: 1px;
     cursor: pointer;
-    animate: 0.2s;
     box-shadow: 0px 0px 0px #000000;
     background: #3071A9;
     border-radius: 2px;
@@ -141,7 +140,6 @@ input[type=range]::-moz-range-track {
     width: 100%;
     height: 1px;
     cursor: pointer;
-    animate: 0.2s;
     box-shadow: 0px 0px 0px #000000;
     background: #3071A9;
     border-radius: 2px;
@@ -162,7 +160,6 @@ input[type=range]::-ms-track {
     width: 100%;
     height: 1px;
     cursor: pointer;
-    animate: 0.2s;
     background: transparent;
     border-color: transparent;
     color: transparent;
@@ -214,7 +211,7 @@ input[type=range]:focus::-ms-fill-upper {
     }
 }
 
-@media only screen and (min-width 400px) and (max-width: 500px) {
+@media only screen and (min-width: 400px) and (max-width: 500px) {
     .wrapper {
         border: none;
     }
